; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_colordlg.c_CC_WMPaint.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_colordlg.c_CC_WMPaint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*)* @CC_WMPaint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CC_WMPaint(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %4 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @BeginPaint(i32 %6, i32* %3)
  %8 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %9 = call i32 @CC_PaintPredefColorArray(%struct.TYPE_10__* %8, i32 6, i32 8)
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %11 = call i32 @CC_PaintUserColorArray(%struct.TYPE_10__* %10, i32 2, i32 8)
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %13 = call i32 @CC_PaintLumBar(%struct.TYPE_10__* %12)
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %15 = call i32 @CC_PaintTriangle(%struct.TYPE_10__* %14)
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %17 = call i32 @CC_PaintSelectedColor(%struct.TYPE_10__* %16)
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %19 = call i32 @CC_PaintColorGraph(%struct.TYPE_10__* %18)
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %21 = call i32 @CC_PaintCross(%struct.TYPE_10__* %20)
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @EndPaint(i32 %24, i32* %3)
  %26 = load i32, i32* @TRUE, align 4
  ret i32 %26
}

declare dso_local i32 @BeginPaint(i32, i32*) #1

declare dso_local i32 @CC_PaintPredefColorArray(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @CC_PaintUserColorArray(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @CC_PaintLumBar(%struct.TYPE_10__*) #1

declare dso_local i32 @CC_PaintTriangle(%struct.TYPE_10__*) #1

declare dso_local i32 @CC_PaintSelectedColor(%struct.TYPE_10__*) #1

declare dso_local i32 @CC_PaintColorGraph(%struct.TYPE_10__*) #1

declare dso_local i32 @CC_PaintCross(%struct.TYPE_10__*) #1

declare dso_local i32 @EndPaint(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
